--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -11,9 +11,6 @@
   "about": {
     "message": "有關"
   },
-  "accept_terms": {
-    "message": "接受條款"
-  },
   "ad_blocking": {
     "message": "廣告封鎖"
   },
@@ -34,21 +31,21 @@
   "anti_tracking": {
     "message": "反跟蹤"
   },
-  "any_questions__anytime_": {
-    "message": "有任何問題嗎？ 隨時提問！"
-  },
   "apply_optimal_privacy_settings_": {
     "message": "套用最佳隱私權設定："
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "你確定要停用「追蹤器預覽」嗎？"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "你確定要跳過啟用 Ghostery 嗎？"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "確定要繼續停用 Ghostery 嗎？"
   },
   "audio_video_player": {
     "message": "音訊/視訊播放器",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_of_cookie_consent_notices_": {
+    "message": "自動拒絕 cookie 同意通知。"
   },
   "back": {
     "message": "返回"
@@ -66,11 +63,11 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "查看<a href=\"$${0}\" target=\"_blank\">常見問題集</a>或寄電子郵件至 <a href=\"mailto:$${1}\">$${2}</a>。 <br/> 我們非常樂意與你聯絡！"
-  },
   "clear_all": {
     "message": "全部清除"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "點擊搜尋欄位旁邊的拼圖圖示，將 Ghostery 釘選至工具列。"
   },
   "comments": {
     "message": "評論",
@@ -85,9 +82,6 @@
   },
   "contact_support": {
     "message": "聯絡支援"
-  },
-  "continue": {
-    "message": "繼續"
   },
   "copied_to_clipboard": {
     "message": "複製到剪貼簿"
@@ -108,11 +102,14 @@
   "disabled": {
     "message": "已停用"
   },
+  "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
+    "message": "在瀏覽器工具列中的 Ghostery 圖示上顯示追蹤器記數。"
+  },
   "done": {
     "message": "完成"
   },
-  "eliminates_ads_on_websites_you_visit__offering_a_calm__safe_and_private_internet_": {
-    "message": "Eliminates ads on websites you visit, offering a calm, safe and private internet."
+  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
+    "message": "消除網站上的廣告，獲得安全又快速的瀏覽體驗。"
   },
   "email": {
     "message": "電郵",
@@ -120,6 +117,9 @@
   },
   "enable_ghostery": {
     "message": "啟用 Ghostery"
+  },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "啟用  Ghostery，開始更安全、更快速地瀏覽網頁，同時減少廣告量。"
   },
   "enable_ghostery_to_get_started": {
     "message": "啟用 Ghostery 開始"
@@ -141,20 +141,26 @@
   "for_more_information_read_our_full": {
     "message": "如欲了解更多訊息，請閱讀我們的全文"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery 瀏覽器擴充程式已安裝至瀏覽器，但尚未啟用。你目前的網頁瀏覽未受保護。"
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "由於缺乏相關權限，Ghostery 無法阻擋。"
+  },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery 已在此網站上恢復。"
   },
   "ghostery_has_nothing_to_do_on_this_page": {
     "message": "Ghostery 與此頁面無關"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery 已經準備好阻擋追蹤器，並在你瀏覽網頁時保護你的隱私！"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery 已關閉"
+  },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery 已在此網站上暫停。"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery 的設置是為了在其追蹤中制止追蹤器並在瀏覽時保護你的隱私！"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery 正在其追蹤中制止追蹤器，並防止你被分析和你的個人資料被賣給資料仲介。"
   },
   "ghostery_paused": {
     "message": "Ghostery暫停"
@@ -162,14 +168,14 @@
   "ghostery_privacy_policy": {
     "message": "Ghostery 隱私權政策"
   },
-  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collectors__from_ads_to_trackers_and_cookie_popups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collectors, from ads to trackers and cookie popups."
-  },
-  "ghostery_s_ai_driven_anti_tracking_technology_prevents_various_tracking_techniques_securing_your_digital_privacy_while_browsing_the_web_": {
-    "message": "Ghostery’s AI driven Anti-Tracking technology prevents various tracking techniques securing your digital privacy while browsing the web."
+  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
+    "message": "Ghostery 透過檢測並阻擋廣告、追蹤器和 cookie 彈跳視窗等數據收集方式保護你的隱私。"
   },
   "ghostery_settings": {
     "message": "Ghostery 設定"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery 幫你阻擋追蹤器，防止數據中介獲得你的個人資料。"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghostery 將在此網站上暫停。 你可以隨時在 Ghostery 設定中更改此設定，制止追蹤器和廣告在網路中追蹤你"
@@ -180,15 +186,24 @@
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
     "message": "Ghostery 將在此網站上暫停 1 小時"
   },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery 將顯示頁面中已經阻擋的追蹤器數量。點擊 Ghostery 圖示可以顯示更多資訊。"
+  },
   "hosting": {
     "message": "託管",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "我同意將非個人資料傳送到 <a href=\"$${0}\">Ghostery 的 WhoTracks.Me</a>，而且我接受 <a href=\"$${1}\">Ghostery 隱私權政策< /a>"
+  "ignore": {
+    "message": "忽略"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "網頁追蹤器的資訊將依據我們的<a href=\"$${0}\">隱私權政策</a>分享"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "它的存在要歸功於每位選擇將非個人資料傳送到 WhoTracks.Me 的 Ghostery 用戶的微小貢獻。 這些資料的輸入使 Ghostery 能夠提供有關追蹤器的即時情報，進而為整個 Ghostery 社群提供保護。"
+  },
+  "keep_disabled": {
+    "message": "保持關閉"
   },
   "learn_more": {
     "message": "瞭解更多"
@@ -196,7 +211,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "讓 Ghostery 成為你的全面隱私倡議者，拒絕所有彈出式視窗和追蹤，或者你自己動手！"
   },
-  "manifest_name": {
+	"manifest_name": {
     "message": "Ghostery – 隱私廣告攔截器"
   },
   "manifest_short_description": {
@@ -260,6 +275,15 @@
   "permission_required": {
     "message": "需要權限"
   },
+  "pin_extension_for_easy_access": {
+    "message": "釘選擴充程式即可方便使用"
+  },
+  "pin_it_here": {
+    "message": "於此處釘選"
+  },
+  "prevents_various_tracking_techniques_using_ai_driven_technology_": {
+    "message": "使用 AI 科技防止各種追蹤技術。"
+  },
   "privacy_policy": {
     "message": "隱私權政策"
   },
@@ -272,11 +296,8 @@
   "read_more_on_whotracks_me": {
     "message": "在 WhoTracks.Me 上繼續閱讀"
   },
-  "removes_intrusive_cookie_popups_and_expresses_dissent_to_online_tracking__you_can_browse_the_web_without_worrying_about_cookie_consent_dialogues_or_privacy_violations_": {
-    "message": "Removes intrusive cookie popups and expresses dissent to online tracking. You can browse the web without worrying about cookie consent dialogues or privacy violations."
-  },
-  "replaces_ghostery_icon_in_the_browser_toolbar": {
-    "message": "Replaces Ghostery icon in the browser toolbar"
+  "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
+    "message": "將瀏覽器工具列中的 Ghostery 圖示換成追蹤器齒輪。"
   },
   "report_a_broken_page": {
     "message": "報告已損毀的網頁"
@@ -290,11 +311,11 @@
   "settings": {
     "message": "設定"
   },
-  "show_tracker_count_badge_on_the_ghostery_icon_in_browser_toolbar": {
-    "message": "在網頁瀏覽器工具欄上顯示網頁跟蹤器點算方塊"
+  "setup_successful": {
+    "message": "設定成功"
   },
-  "shows_statistical_information_about_website_tracking_on_search_engine_result_page": {
-    "message": "Shows statistical information about website tracking on search engine result page"
+  "shows_the_tracker_preview_beside_search_results_": {
+    "message": "在搜尋結果旁顯示追蹤器預覽。"
   },
   "sign_in": {
     "message": "登入"
@@ -320,8 +341,8 @@
     "message": "遙測",
     "description": "Tracker category name"
   },
-  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "Ghostery 瀏覽器擴充功能已安裝在你的瀏覽器中，但 Ghosty 正在小睡片刻。"
+  "terms___conditions": {
+    "message": "條款及條件"
   },
   "tired_of_cookie_popups_": {
     "message": "厭倦了 Cookie 彈出式視窗？"
@@ -354,11 +375,17 @@
   "websites": {
     "message": "網站"
   },
+  "welcome_to_ghostery": {
+    "message": "歡迎來到 Ghostery"
+  },
   "what_is_whotracks_me_": {
     "message": "什么是 WhoTracks.Me？"
   },
-  "when_pausing_ghostery_on_individual_websites_for_various_personal_reasons__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites for various personal reasons, those websites will appear here."
+  "what_s_next_": {
+    "message": "下一步是？"
+  },
+  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
+    "message": "對個別網站暫停使用 Ghostery 後，這些網站會顯示在這裡。"
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me 由 Ghostery 營運，是 Ghostery 人工智慧反追蹤技術不可或缺的一部分。 它是有關追蹤器的綜合性全球資源，使網路追蹤透明化。"
@@ -369,28 +396,19 @@
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me 輪盤"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "啟用 Ghostery 後，你即刻可以更安全、更快速地瀏覽網路，並減少惱人的廣告。"
-  },
   "yes": {
     "message": "是"
+  },
+  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
+    "message": "你可以在下方調整設定。我們建議你永遠保持啟用。"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "你可以隨時在 <strong>Ghostery 控制面板</strong>中更改這些設定。"
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "你可以隨時改變主意並啟用 Ghostery，以在 Ghostery 面板中開始追蹤追蹤器。"
-  },
-  "you_can_manage_the_functionality_of_these_privacy_components_to_your_liking__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can manage the functionality of these privacy components to your liking. We recommend keeping them ON at all times."
-  },
-  "you_chose_to_skip_enabling_ghostery_": {
-    "message": "你選擇跳過啟用 Ghostery！"
-  },
-  "you_re_all_set__ghosterian_": {
-    "message": "一切準備就緒，Ghosterian！"
-  },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "你將不會再在搜尋結果旁邊看到追蹤器輪盤。"
+  },
+  "your_privacy_features_": {
+    "message": "你的隱私功能："
   }
 }
