--- a/extension-manifest-v2/_locales/fr/messages.json
+++ b/extension-manifest-v2/_locales/fr/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "Accepter les conditions"
-  },
   "account_creation_privacy_statement": {
     "message": "Nos $LINK_TERMS_START$conditions d'utilisation$LINK_TERMS_END$  générales et notre $LINK_UA_START$contrat de licence$LINK_UA_END$ s'appliquent. Découvrez notre Politique de Confidentialité $LINK_PS_START$ici$LINK_PS_END$.",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "publicité"
+  },
+  "ad_blocking": {
+    "message": "Blocage de publicité"
   },
   "additional_permissions_required": {
     "message": "Permissions supplémentaires requises"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "Annuler"
   },
-  "any_questions__anytime_": {
-    "message": "Des questions? Nous sommes là pour vous !"
+  "anti_tracking": {
+    "message": "Anti-pistage"
   },
   "apply_optimal_privacy_settings_": {
     "message": "Utilisez les meilleurs paramètres :"
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Voulez-vous vraiment désactiver l'aperçu des trackers ?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Voulez-vous vraiment reporter l'activation de Ghostery ?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Voulez-vous vraiment que Ghostery reste désactivé ?"
   },
   "audio_video_player": {
     "message": "Lecteur audio/vidéo ",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Consulte la FAQ <a href=\"$${0}\" target=\"_blank\"> </a> ou écris-nous à <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Nous serons plus qu'heureux de te parler !"
-  },
   "choose_your_default_search": {
     "message": "Choisir votre recherche par défaut"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "Choisissez votre plan de protection de la vie privée"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Cliquez sur l'icône de puzzle en regard de la barre de recherche et épinglez Ghostery à votre barre d'outils."
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "Gestion du consentement",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "Continuer"
-  },
   "cookie": {
     "message": "cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "Activer Ghostery"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Activez Ghostery pour parcourir le Web de manière plus sûre et plus rapide, et avec moins de publicités."
+  },
   "enable_ghostery_to_get_started": {
     "message": "Donnez le feu vert à Ghostery"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Version de base"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "L'extension de navigateur Ghostery est installée dans votre navigateur, mais elle est inactive. Vous parcourez le Web sans protection."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery ne peut pas les bloquer en raison d'autorisations manquantes."
+  },
   "ghostery_disabled": {
     "message": "Ghostery est inactif"
   },
   "ghostery_enabled": {
     "message": "Ghostery est actif"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery est prêt à protéger votre vie privée en mettant en échec les mouchards quand vous naviguez !"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery est désactivé"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery est installé !"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery est conçu pour protéger votre vie privée en mettant en échec les mouchards quand vous naviguez !"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery arrête les mouchards dans leurs traces et t'empêche d'être profilé et de vendre tes informations personnelles à des courtiers en données."
   },
   "ghostery_privacy_policy": {
     "message": "Politique de confidentialité de Ghostery"
   },
   "ghostery_settings": {
     "message": "Paramètres Ghostery"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery met en échec les trackers et empêche les courtiers en données de dresser votre profil."
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery affichera le nombre de trackers bloqués sur une page. Vous pouvez obtenir des informations détaillées en cliquant sur l'icône Ghostery."
   },
   "global_settings_saved": {
     "message": "Paramètres globaux sauvegardés"
@@ -828,8 +840,11 @@
     "message": "Hébergement",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "J'accepte d'envoyer des informations non personnelles à <a href=\"$${0}\"> WhoTracks.Me de Ghostery </a>, et j'accepte la politique de confidentialité de <a href=\"$${1}\"> Ghostery </a>. "
+  "ignore": {
+    "message": "Ignorer"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Des informations sur les trackers web seront partagées conformément à notre <a href=\"$${0}\">politique de confidentialité</a>"
   },
   "invalid_email_forgot": {
     "message": "Désolé, vous devez saisir une adresse e-mail valide."
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Il existe grâce aux micro-contributions de chaque utilisateur de Ghostery qui choisit d'envoyer des informations non personnelles à WhoTracks.Me. Ces informations permettent à Ghostery de fournir des renseignements en temps réel sur les mouchards, ce qui permet de protéger l'ensemble de la communauté Ghostery."
+  },
+  "keep_disabled": {
+    "message": "Maintenir désactivé"
   },
   "last_name_field_label": {
     "message": "Nom (facultatif) :"
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "Sélectionner un moteur de recherche par défaut pour toutes vos recherches."
   },
+  "pin_extension_for_easy_access": {
+    "message": "Épingler l'extension pour un accès facile"
+  },
+  "pin_it_here": {
+    "message": "L'épingler ici"
+  },
   "please_enter_a_valid_email": {
     "message": "Merci de saisir une adresse e-mail valide."
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "Afficher l'aperçu der mouchards à côté des résultats"
   },
+  "setup_successful": {
+    "message": "Configuration réussie"
+  },
   "seven_day_free_trial": {
     "message": "Essai gratuit de 7 jours"
   },
@@ -1790,6 +1817,9 @@
     "message": "Télémétrie",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "Conditions générales d'utilisation"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "L'extension Ghostery Browser est installée dans votre navigateur, mais Ghosty fait une petite sieste."
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "Qu'est-ce que WhoTracks.Me ?"
   },
+  "what_s_next_": {
+    "message": "Quelle est la suite ?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "Saisissez une URL valide ou un joker."
   },
@@ -1888,17 +1921,11 @@
   "whotracks_me_statistical_report": {
     "message": "Rapport statistique de WhoTracks.Me"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Avec Ghostery activé, tu navigues instantanément sur le Web de manière plus sûre, plus rapide et avec moins de publicités gênantes."
-  },
   "yes": {
     "message": "Oui"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Vous pouvez accéder à ces paramètres à tout moment dans le&nbsp;<strong>panneau de commande</strong>."
-  },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Tu peux changer d'avis à tout moment et permettre à Ghostery de commencer à suivre les trackers pour toi dans le panneau Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Vous avez choisi de reporter l'activation de Ghostery !"
@@ -1911,5 +1938,8 @@
   },
   "your_email_do_not_match": {
     "message": "Vos e-mails ne sont pas reconnus."
+  },
+  "your_privacy_features_": {
+    "message": "Vos fonctions de confidentialité :"
   }
 }
