--- a/extension-manifest-v2/_locales/hu/messages.json
+++ b/extension-manifest-v2/_locales/hu/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "Feltételek elfogadása"
-  },
   "account_creation_privacy_statement": {
     "message": "Az Általános $LINK_TERMS_START$Szerződési Feltételeink$LINK_TERMS_END$ és a $LINK_UA_START$Licencegyezményünk$LINK_UA_END$ érvényesek és hatályosak. Az Adatvédelmi Nyilatkozatunkat $LINK_PS_START$itt$LINK_PS_END$ találja meg.",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "hirdetés"
+  },
+  "ad_blocking": {
+    "message": "Hirdetésblokkolás"
   },
   "additional_permissions_required": {
     "message": "További engedélyek szükségesek"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "Visszavonás"
   },
-  "any_questions__anytime_": {
-    "message": "Kérdése van? Csak bátran!"
+  "anti_tracking": {
+    "message": "Követés elleni védelem"
   },
   "apply_optimal_privacy_settings_": {
     "message": "Optimális adatvédelmi beállítások alkalmazása:"
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Are you sure you want to disable Trackers Preview?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Biztos, hogy nem akarja engedélyezni a Ghostery-t?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Are you sure you want to keep Ghostery disabled?"
   },
   "audio_video_player": {
     "message": "Zene-/filmlejátszó",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Tekintse meg a <a href=\"$${0}\" target=\"_blank\">GYIK</a> oldalunkat vagy írjon nekünk e-mail-t: <a href=\"mailto:$${1}\">$${2}</a>. <br/> Örömmel állunk rendelkezésére!"
-  },
   "choose_your_default_search": {
     "message": "Válassza ki az alapértelmezett keresőt"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "Válasszon adatvédelmi csomagot"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Click the puzzle icon next to the search bar and pin Ghostery to your toolbar."
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "Hozzájárulás-kezelés",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "Folytatás"
-  },
   "cookie": {
     "message": "cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "Ghostery engedélyezése"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Enable Ghostery to browse the web safer, faster, and with less ads."
+  },
   "enable_ghostery_to_get_started": {
     "message": "Engedélyezze a Ghostery-t a kezdéshez"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Alapvető"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery Browser Extension is installed in your browser but is inactive. You are browsing the web unprotected."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery can't block them due to missing permissions."
+  },
   "ghostery_disabled": {
     "message": "Ghostery letiltva"
   },
   "ghostery_enabled": {
     "message": "Ghostery engedélyezve"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery is all set to stop trackers in their tracks and protect your privacy while browsing!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery is disabled"
+  },
   "ghostery_is_ready": {
     "message": "A Ghostery készen áll!"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "A Ghostery úgy van beállítva, hogy hatástalanítsa a nyomkövetőket, és megvédje a magánéletét böngészés közben!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "A Ghostery hatástalanítja a nyomkövetőket, és megakadályozza, hogy profilozzák önt és személyes adatait eladják adatbrókereknek."
   },
   "ghostery_privacy_policy": {
     "message": "Ghostery Adatvédelmi Szabályzat"
   },
   "ghostery_settings": {
     "message": "Ghostery settings"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery stops trackers in their tracks and prevents you from being profiled by data brokers."
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
   },
   "global_settings_saved": {
     "message": "Globális beállítások mentve"
@@ -828,8 +840,11 @@
     "message": "Hosztolás",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Hozzájárulok, hogy a nem személyes adataimat elküldjék a <a href=\"$${0}\">Ghostery WhoTracks.Me</a> részére, és elfogadom a <a href=\"$${1}\">Ghostery Adatvédelmi Szabályzatát</a>."
+  "ignore": {
+    "message": "Ignore"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Information about web trackers will be shared in accordance with our <a href=\"$${0}\">Privacy Policy</a>"
   },
   "invalid_email_forgot": {
     "message": "Sajnáljuk, de valós emailcímet kell megadnia."
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "A Ghostery minden olyan Ghostery-felhasználó mikro-hozzájárulásának köszönhetően létezik, aki úgy dönt, hogy nem személyes információkat küld a WhoTracks.Me részére. Az adatok átadása lehetővé teszi a Ghostery számára, hogy valós idejű információkat szolgáltasson a nyomonkövetőkről, amely ennek következtében védelmet nyújt a teljes Ghostery felhasználói közösség számára."
+  },
+  "keep_disabled": {
+    "message": "Keep disabled"
   },
   "last_name_field_label": {
     "message": "Vezetéknév (opcionális):"
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "Válassza ki az alapértelmezett keresőmotort a kereséseihez."
   },
+  "pin_extension_for_easy_access": {
+    "message": "Pin Extension for easy access"
+  },
+  "pin_it_here": {
+    "message": "Pin it here"
+  },
   "please_enter_a_valid_email": {
     "message": "Kérjük, érvényes emailcímet adjon meg."
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "Nyomonkövetők előnézetének megjelenítése a keresési eredmények mellett"
   },
+  "setup_successful": {
+    "message": "Setup Successful"
+  },
   "seven_day_free_trial": {
     "message": "7 napos ingyenes próbaverzió"
   },
@@ -1790,6 +1817,9 @@
     "message": "Telemetria",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "Felhasználási Feltételek"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "A Ghostery böngészőbővítmény telepítve van a böngészőjébe, de Ghosty éppen szundikál."
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "Mi az a WhoTracks.Me?"
   },
+  "what_s_next_": {
+    "message": "What’s next?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "Érvényes URL-címet vagy helyettesítő karaktert adjon meg."
   },
@@ -1888,17 +1921,11 @@
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me Statistical Report"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "A Ghostery engedélyezésével azonnal biztonságosabban, gyorsabban és kevesebb idegesítő hirdetéssel böngészhet a weben."
-  },
   "yes": {
     "message": "Igen"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Ezeket a beállításokat bármikor megváltoztathatja a&nbsp;<strong>Ghostery vezérlőpultban</strong>."
-  },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Bármikor meggondolhatja magát, és engedélyezheti a Ghostery panelen, hogy a Ghostery elkezdje a nyomonkövetők követését."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Úgy döntött, hogy kihagyja a Ghostery engedélyezését!"
@@ -1911,5 +1938,8 @@
   },
   "your_email_do_not_match": {
     "message": "Az emailcímek nem egyeznek."
+  },
+  "your_privacy_features_": {
+    "message": "Your Privacy Features:"
   }
 }
