--- a/extension-manifest-v2/_locales/it/messages.json
+++ b/extension-manifest-v2/_locales/it/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "Accetta i termini"
-  },
   "account_creation_privacy_statement": {
     "message": "Si applicano le nostre $LINK_TERMS_START$condizioni generali$LINK_TERMS_END$ e il nostro $LINK_UA_START$contratto di licenza$LINK_UA_END$. Troverai la nostra dichiarazione sulla tutela della privacy $LINK_PS_START$qui$LINK_PS_END$.",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "pubblicità"
+  },
+  "ad_blocking": {
+    "message": "Blocco pubblicità"
   },
   "additional_permissions_required": {
     "message": "Ulteriori permessi richiesti"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "Annulla"
   },
-  "any_questions__anytime_": {
-    "message": "Domande? Quando vuoi!"
+  "anti_tracking": {
+    "message": "Anti-Tracking"
   },
   "apply_optimal_privacy_settings_": {
     "message": "Applica impostazioni ottimali per la privacy:"
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Disattivare l'anteprima dei tracker?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Sicuro di non voler abilitare Ghostery?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Confermi di volere mantenere disabilitato Ghostery?"
   },
   "audio_video_player": {
     "message": "Lettore Audio/Video",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Consulta le FAQ di <a href=\"$${0}\" target=\"_blank\"> </a> o scrivici a <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Saremo più che felici di parlare con te!"
-  },
   "choose_your_default_search": {
     "message": "Scegli il tuo motore di ricerca predefinito"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "Scegli il tuo piano privacy"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Cliccare sull’icona del puzzle accanto alla barra di ricerca e aggiungi Ghostery alla barra degli strumenti."
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "Gestione del consenso",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "Continua"
-  },
   "cookie": {
     "message": "cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "Abilita Ghostery"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Consenti a Ghostery di navigare sul web in modo più sicuro, veloce e con meno pubblicità."
+  },
   "enable_ghostery_to_get_started": {
     "message": "Abilita Ghostery per iniziare"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Base"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "L’estensione per il browser Ghostery è installata nel tuo browser ma è inattiva. Stai navigando sul web in modalità non protetta."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery non può bloccarli a causa di autorizzazioni mancanti."
+  },
   "ghostery_disabled": {
     "message": "Ghostery disabilitato"
   },
   "ghostery_enabled": {
     "message": "Ghostery abilitato"
   },
-  "ghostery_is_ready": {
-    "message": "Ghostery è pronto!"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery è impostato per bloccare i tracker e proteggere la tua privacy durante la navigazione!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery blocca i tracker e impedisce che tu venga profilato e che le tue informazioni personali vengano vendute agli intermediari di dati."
+  "ghostery_is_disabled": {
+    "message": "Ghostery è disabilitato"
+  },
+  "ghostery_is_ready": {
+    "message": "Ghostery è pronto!"
   },
   "ghostery_privacy_policy": {
     "message": "Informativa sulla Privacy di Ghostery"
   },
   "ghostery_settings": {
     "message": "Impostazioni Ghostery"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery blocca i tracker e impedisce la tua profilazione da parte di broker di dati."
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery mostrerà quanti tracker sono stati bloccati in una pagina. Cliccare sull’icona di Ghostery per avere informazioni più dettagliate."
   },
   "global_settings_saved": {
     "message": "Impostazioni Globali Salvate"
@@ -828,8 +840,11 @@
     "message": "Hosting",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Accetto di inviare informazioni non personali a <a href=\"$${0}\"> WhoTracks.Me di Ghostery </a>, e accetto l'Informativa sulla trattamento dei dati personali di <a href=\"$${1}\"> Ghostery </a> "
+  "ignore": {
+    "message": "Ignora"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Le informazioni inerenti i tracker sul web verranno condivise in conformità alla nostra <a href=\"$${0}\">Informativa sulla privacy</a>"
   },
   "invalid_email_forgot": {
     "message": "Spiacenti, devi inserire un vero indirizzo email."
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Esiste grazie ai micro-contributi di ogni utente di Ghostery che sceglie di inviare informazioni non personali a WhoTracks.Me. Il contributo permette a Ghostery di fornire informazioni in tempo reale sui tracker, che a loro volta proteggono l'intera comunità di Ghostery."
+  },
+  "keep_disabled": {
+    "message": "Mantieni disabilitato"
   },
   "last_name_field_label": {
     "message": "Cognome (Opzionale):"
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "Scegli un motore di ricerca predefinito per tutte le ricerche."
   },
+  "pin_extension_for_easy_access": {
+    "message": "Estensione Aggiungi per un accesso rapido"
+  },
+  "pin_it_here": {
+    "message": "Aggiungi qui"
+  },
   "please_enter_a_valid_email": {
     "message": "Per favore, inserisci un indirizzo email valido"
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "Mostra anteprima Tracker accanto ai risultati di ricerca"
   },
+  "setup_successful": {
+    "message": "Configurazione completata correttamente"
+  },
   "seven_day_free_trial": {
     "message": "7 giorni di prova gratuiti"
   },
@@ -1790,6 +1817,9 @@
     "message": "Telemetria",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "Termini e Condizioni"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "L'estensione per il browser Ghostery è installata, ma Ghosty sta facendo un sonnellino."
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "Che cos'è WhoTracks.Me?"
   },
+  "what_s_next_": {
+    "message": "Come procedere?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "Inserisci un URL o un carattere jolly valido."
   },
@@ -1888,17 +1921,11 @@
   "whotracks_me_statistical_report": {
     "message": "Rapporto statistico WhoTracks.Me"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Con Ghostery attivato navighi sul web in modo più sicuro, più veloce e con meno annunci fastidiosi."
-  },
   "yes": {
     "message": "Sì"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Puoi sempre possibile modificare queste impostazioni nel&nbsp;<strong>pannello di controllo di Ghostery</strong>."
-  },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Puoi cambiare idea in qualsiasi momento e consentire a Ghostery di iniziare a tracciare i tracker per te nel pannello di Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Hai scelto di non abilitare Ghostery!"
@@ -1911,5 +1938,8 @@
   },
   "your_email_do_not_match": {
     "message": "I tuo indirizzi email non coincidono."
+  },
+  "your_privacy_features_": {
+    "message": "Le tue funzioni privacy:"
   }
 }
