--- a/extension-manifest-v2/_locales/pl/messages.json
+++ b/extension-manifest-v2/_locales/pl/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "Akceptowanie warunków"
-  },
   "account_creation_privacy_statement": {
     "message": "Obowiązuje nasz ogólny $LINK_TERMS_START$Regulamin$LINK_TERMS_END$ oraz nasza $LINK_UA_START$Umowa licencyjna$LINK_UA_END$. Nasze zasady ochrony prywatności znajdują się $LINK_PS_START$tutaj$LINK_PS_END$.",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "reklama"
+  },
+  "ad_blocking": {
+    "message": "Blokowanie reklam"
   },
   "additional_permissions_required": {
     "message": "Wymagane dodatkowe uprawnienia"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "Cofnij"
   },
-  "any_questions__anytime_": {
-    "message": "Masz pytanie? Skontaktuj się z nami!"
+  "anti_tracking": {
+    "message": "Ochrona przed śledzeniem"
   },
   "apply_optimal_privacy_settings_": {
     "message": "Zastosuj optymalne ustawienia prywatności:"
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Chcesz wyłączyć Podgląd trackerów?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Na pewno chcesz pominąć aktywację Ghostery?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Czy na pewno chcesz, aby Ghostery nadal było nieaktywne?"
   },
   "audio_video_player": {
     "message": "Odtwarzacz audio/wideo",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Sprawdź <a href=\"$${0}\" target=\"_blank\"> FAQ </a> lub napisz do nas na <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Będziemy bardziej niż szczęśliwi, aby porozmawiać z tobą!"
-  },
   "choose_your_default_search": {
     "message": "Wybierz domyślną wyszukiwarkę"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "Wybierz plan prywatności"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Kliknij ikonę puzzla obok pola wyszukiwania i przypnij Ghostery do paska narzędzi."
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "Zarządzanie zgodami",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "Kontynuuj"
-  },
   "cookie": {
     "message": "plik cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "Aktywuj Ghostery"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Uaktywnij Ghostery, aby przeglądać strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam. "
+  },
   "enable_ghostery_to_get_started": {
     "message": "Aktywuj Ghostery, aby rozpocząć"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Podstawowy"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Wtyczka Ghostery Browser jest zainstalowana na twojej przeglądarce, ale jest nieaktywna. Przeglądasz strony internetowe w sposób niechroniony."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery nie może ich blokować, ponieważ nie ma uprawnień."
+  },
   "ghostery_disabled": {
     "message": "Ghostery nieaktywne"
   },
   "ghostery_enabled": {
     "message": "Ghostery aktywne"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery jest już gotowy, aby blokować Trackerów i chronić twoją prywatność podczas przeglądania."
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery jest nieaktywne"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery jest gotowe!"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery działa tak, aby zatrzymać trackery podczas ich śledzenia i ochronić Twoją prywatność podczas przeglądania internetu!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery zatrzymuje trackery na ich drodze i zapobiega profilowaniu Ciebie i Twoich danych osobowych sprzedawanych brokerom danych."
   },
   "ghostery_privacy_policy": {
     "message": "Polityka prywatności Ghostery"
   },
   "ghostery_settings": {
     "message": "Ustawienia Ghostery"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery blokuje Trackerów i zapobiega profilowaniu przez handlarzy danymi."
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery będzie wyświetlać liczbę Trackerów zablokowanych na danej stronie. Kliknięcie w ikonę Ghostery spowoduje wyśwetlenie bardziej szczegółowych informacji."
   },
   "global_settings_saved": {
     "message": "Ustawienia globalne zapisane"
@@ -828,8 +840,11 @@
     "message": "Hosting",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Wyrażam zgodę na przesyłanie informacji nieosobowych do <a href=\"$${0}\">Ghostery WhoTracks.Me</a>, oraz akceptuję  <a href=\"$${1}\">Politykę Prywatności Ghostery</a> "
+  "ignore": {
+    "message": "Zignoruj"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Informacje dotyczące Trackerów będą udostępniane zgodnie z naszymi <a href=\"$${0}\">Zasadami ochrony prywatności</a>"
   },
   "invalid_email_forgot": {
     "message": "Przykro nam, musisz podać prawdziwy adres e-mail."
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Istnieje dzięki mikrowkładom każdego użytkownika Ghostery, który zdecyduje się wysłać nieosobiste informacje do WhoTracks.Me. Wkład ten umożliwia Ghostery dostarczanie w czasie rzeczywistym informacji o trackerach, co z kolei zapewnia ochronę całej społeczności Ghostery."
+  },
+  "keep_disabled": {
+    "message": "Pozostaw nieaktywne"
   },
   "last_name_field_label": {
     "message": "Nazwisko (opcjonalnie):"
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "Wybierz domyślną wyszukiwarkę dla wszystkich wyszukiwań."
   },
+  "pin_extension_for_easy_access": {
+    "message": "Przypnij Rozszerzenie i ciesz się łatwiejszym dostępem"
+  },
+  "pin_it_here": {
+    "message": "Przypnij je tu"
+  },
   "please_enter_a_valid_email": {
     "message": "Wpisz prawidłowy adres e-mail."
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "Wyświetlaj podgląd trackerach przy wynikach wyszukiwania"
   },
+  "setup_successful": {
+    "message": "Ustawienie zakończone sukcesem"
+  },
   "seven_day_free_trial": {
     "message": "7-dniowy darmowy okres próbny"
   },
@@ -1790,6 +1817,9 @@
     "message": "Telemetria",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "Warunki"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Wtyczka Ghostery Browser jest zainstalowana na twojej przeglądarce, ale Ghosty ucina sobie małą drzemkę."
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "Czym jest WhoTracks.Me?"
   },
+  "what_s_next_": {
+    "message": "Co dalej?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "Proszę wpisać prawidłowy adres URL lub wieloznacznik."
   },
@@ -1888,17 +1921,11 @@
   "whotracks_me_statistical_report": {
     "message": "Raport statystyczny WhoTracks.Me"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Z włączonym Ghostery przeglądasz strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam."
-  },
   "yes": {
     "message": "Tak"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Ustawienia te zawsze możesz zmienić w&nbsp;<strong>Panelu sterowania Ghostery</strong>."
-  },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "W każdej chwili możesz zmienić zdanie i umożliwić Ghostery rozpoczęcie śledzenia trackerów dla Ciebie w panelu Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Postanowiłeś nie aktywować Ghostery!"
@@ -1911,5 +1938,8 @@
   },
   "your_email_do_not_match": {
     "message": "E-maile nie są identyczne."
+  },
+  "your_privacy_features_": {
+    "message": "Twoje opcje ochrony prywatności:"
   }
 }
