--- a/extension-manifest-v2/_locales/pt_BR/messages.json
+++ b/extension-manifest-v2/_locales/pt_BR/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "Aceitar termos"
-  },
   "account_creation_privacy_statement": {
     "message": "Nossos $LINK_TERMS_START$Termos e Condições Gerais$LINK_TERMS_END$ e nosso $LINK_UA_START$Contrato de Licença$LINK_UA_END$ se aplicam. Você encontrará nossa Declaração de Privacidade $LINK_PS_START$aqui$LINK_PS_END$.",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "anúncio"
+  },
+  "ad_blocking": {
+    "message": "Bloqueio de anúncios"
   },
   "additional_permissions_required": {
     "message": "Permissões adicionais necessárias"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "Desfazer"
   },
-  "any_questions__anytime_": {
-    "message": "Alguma pergunta? A qualquer momento!"
+  "anti_tracking": {
+    "message": "Anti-rastreamento"
   },
   "apply_optimal_privacy_settings_": {
     "message": "Aplicar as configurações de privacidade ideais:"
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Tem certeza de que deseja desativar a visualização de rastreadores?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Tem a certeza de que quer saltar a ativação do Ghostery?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Tem certeza de que deseja manter o Ghostery desativado?"
   },
   "audio_video_player": {
     "message": "Reprodutor de Áudio/Vídeo",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Confira nossas <a href=\"$${0}\" target=\"_blank\">FAQsperguntas frequentes</a> ou escreva-nos: <a href=\"mailto:$${1}\">$${2}</a>. <br/> Teremos o maior prazer em falar com você!"
-  },
   "choose_your_default_search": {
     "message": "Escolha sua busca padrão"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "Escolha seu plano de privacidade"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Clique no ícone do quebra-cabeça ao lado da barra de pesquisa e fixe o Ghostery na sua barra de ferramentas."
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "Gerenciamento de consentimento",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "Continuar"
-  },
   "cookie": {
     "message": "cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "Ativar o Ghostery"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Habilite o Ghostery para navegar na web de forma mais segura, rápida e com menos anúncios."
+  },
   "enable_ghostery_to_get_started": {
     "message": "Autorize o Ghostery para começar"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Básico"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas está inativa. Você está navegando na web desprotegido."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "O Ghostery não pode bloqueá-los devido à falta de permissões."
+  },
   "ghostery_disabled": {
     "message": "Ghostery desativado"
   },
   "ghostery_enabled": {
     "message": "Ghostery ativado"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "O Ghostery está pronto para parar os rastreadores e proteger sua privacidade enquanto navega!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery está desabilitado"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery está pronto!"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "O Ghostery está configurado para parar os rastreadores e proteger sua privacidade ao navegar!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "O Ghostery está parando os rastreadores e impedindo que seu perfil seja criado e suas informações pessoais sejam vendidas a negociadores de dados."
   },
   "ghostery_privacy_policy": {
     "message": "Política de Privacidade do Ghostery"
   },
   "ghostery_settings": {
     "message": "Configurações do Ghostery"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "O Ghostery interrompe os rastreadores e impede que você seja analisado por corretores de dados."
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "O Ghostery mostrará quantos rastreadores foram bloqueados em uma página. Clicar no ícone Ghostery revela informações mais detalhadas."
   },
   "global_settings_saved": {
     "message": "Configurações Globais Salvas"
@@ -828,8 +840,11 @@
     "message": "Hospedando",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Concordo em enviar informações não pessoais para o <a href=\"$${0}\">WhoTracks.Me do Ghostery</a> e aceito a <a href=\"$${1}\">Política de Privacidade do Ghostery</a>"
+  "ignore": {
+    "message": "Ignorar"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Informações sobre rastreadores da web serão compartilhadas de acordo com nossa <a href=\"$${0}\"> Política de Privacidade </a> "
   },
   "invalid_email_forgot": {
     "message": "Desculpe, você precisa informar um endereço de email válido."
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Ele existe graças às microcontribuições de cada usuário do Ghostery que opta por enviar informações não pessoais para o WhoTracks.Me. A entrada permite que o Ghostery forneça informações em tempo real sobre rastreadores que, por sua vez, trazem proteção para toda a comunidade Ghostery."
+  },
+  "keep_disabled": {
+    "message": "Manter desabilitado"
   },
   "last_name_field_label": {
     "message": "Sobrenome (opcional):"
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "Escolha um mecanismo de busca padrão para todas as suas buscas."
   },
+  "pin_extension_for_easy_access": {
+    "message": "Extensão de prendedores para fácil acesso"
+  },
+  "pin_it_here": {
+    "message": "Prenda-o aqui"
+  },
   "please_enter_a_valid_email": {
     "message": "Digite um email válido."
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "Mostrar visualização de rastreadores ao lado dos resultados da pesquisa"
   },
+  "setup_successful": {
+    "message": "Configuração bem sucedida"
+  },
   "seven_day_free_trial": {
     "message": "Avaliação gratuita de 7 dias"
   },
@@ -1790,6 +1817,9 @@
     "message": "Telemetria",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "Termos e Condições"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas o Ghosty está tirando uma soneca leve."
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "O que é WhoTracks.Me?"
   },
+  "what_s_next_": {
+    "message": "O que vem a seguir?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "Digite um email ou caractere curinga válidos."
   },
@@ -1888,17 +1921,11 @@
   "whotracks_me_statistical_report": {
     "message": "Relatório estatístico do WhoTracks.Me"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Com o Ghostery ativado, você navega instantaneamente na web de forma mais segura, mais rápida e com anúncios menos irritantes."
-  },
   "yes": {
     "message": "Sim"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Você sempre pode alterar essas configurações no&nbsp;<strong>painel de controle do Ghostery</strong>."
-  },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Você pode mudar de ideia a qualquer momento e permitir que o Ghostery comece a rastrear os rastreadores para você no painel do Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Você optou por ignorar a ativação do Ghostery!"
@@ -1911,5 +1938,8 @@
   },
   "your_email_do_not_match": {
     "message": "Seus emails não conferem."
+  },
+  "your_privacy_features_": {
+    "message": "Seus recursos de privacidade:"
   }
 }
