--- a/extension-manifest-v2/_locales/zh_TW/messages.json
+++ b/extension-manifest-v2/_locales/zh_TW/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "接受條款"
-  },
   "account_creation_privacy_statement": {
     "message": "我們的$LINK_TERMS_START$條款與條件$LINK_TERMS_END$ 和我們的 $LINK_UA_START$許可協議$LINK_UA_END$ 適用。您可以找到我們的隱私聲明$LINK_PS_START$here$LINK_PS_END$。",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "廣告"
+  },
+  "ad_blocking": {
+    "message": "廣告封鎖"
   },
   "additional_permissions_required": {
     "message": "需要額外的權限"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "還原"
   },
-  "any_questions__anytime_": {
-    "message": "有任何問題嗎？ 隨時提問！"
+  "anti_tracking": {
+    "message": "反跟蹤"
   },
   "apply_optimal_privacy_settings_": {
     "message": "套用最佳隱私權設定："
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "你確定要停用「追蹤器預覽」嗎？"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "你確定要跳過啟用 Ghostery 嗎？"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "確定要繼續停用 Ghostery 嗎？"
   },
   "audio_video_player": {
     "message": "音訊/視訊播放器",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "查看<a href=\"$${0}\" target=\"_blank\">常見問題集</a>或寄電子郵件至 <a href=\"mailto:$${1}\">$${2}</a>。 <br/> 我們非常樂意與你聯絡！"
-  },
   "choose_your_default_search": {
     "message": "選擇預設搜尋"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "選擇您的隱私計畫"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "點擊搜尋欄位旁邊的拼圖圖示，將 Ghostery 釘選至工具列。"
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "同意管理",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "繼續"
-  },
   "cookie": {
     "message": "cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "啟用 Ghostery"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "啟用  Ghostery，開始更安全、更快速地瀏覽網頁，同時減少廣告量。"
+  },
   "enable_ghostery_to_get_started": {
     "message": "啟用 Ghostery 開始"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Basic"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery 瀏覽器擴充程式已安裝至瀏覽器，但尚未啟用。你目前的網頁瀏覽未受保護。"
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "由於缺乏相關權限，Ghostery 無法阻擋。"
+  },
   "ghostery_disabled": {
     "message": "Ghostery 已停用"
   },
   "ghostery_enabled": {
     "message": "Ghostery 已啟用"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery 已經準備好阻擋追蹤器，並在你瀏覽網頁時保護你的隱私！"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery 已關閉"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery 已準備好了！"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery 的設置是為了在其追蹤中制止追蹤器並在瀏覽時保護你的隱私！"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery 正在其追蹤中制止追蹤器，並防止你被分析和你的個人資料被賣給資料仲介。"
   },
   "ghostery_privacy_policy": {
     "message": "Ghostery 隱私權政策"
   },
   "ghostery_settings": {
     "message": "Ghostery 設定"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery 幫你阻擋追蹤器，防止數據中介獲得你的個人資料。"
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery 將顯示頁面中已經阻擋的追蹤器數量。點擊 Ghostery 圖示可以顯示更多資訊。"
   },
   "global_settings_saved": {
     "message": "全球設定已儲存"
@@ -828,8 +840,11 @@
     "message": "託管",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "我同意將非個人資料傳送到 <a href=\"$${0}\">Ghostery 的 WhoTracks.Me</a>，而且我接受 <a href=\"$${1}\">Ghostery 隱私權政策< /a>"
+  "ignore": {
+    "message": "忽略"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "網頁追蹤器的資訊將依據我們的<a href=\"$${0}\">隱私權政策</a>分享"
   },
   "invalid_email_forgot": {
     "message": "很抱歉，您必須輸入一個真實的電郵址。"
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "它的存在要歸功於每位選擇將非個人資料傳送到 WhoTracks.Me 的 Ghostery 用戶的微小貢獻。 這些資料的輸入使 Ghostery 能夠提供有關追蹤器的即時情報，進而為整個 Ghostery 社群提供保護。"
+  },
+  "keep_disabled": {
+    "message": "保持關閉"
   },
   "last_name_field_label": {
     "message": "姓 (非必填項):"
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "為您所有的搜尋選擇預設的搜尋引擎。"
   },
+  "pin_extension_for_easy_access": {
+    "message": "釘選擴充程式即可方便使用"
+  },
+  "pin_it_here": {
+    "message": "於此處釘選"
+  },
   "please_enter_a_valid_email": {
     "message": "請輸入一個有效的電郵。"
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "Show Trackers Preview next to search results"
   },
+  "setup_successful": {
+    "message": "設定成功"
+  },
   "seven_day_free_trial": {
     "message": "7 天免費試用"
   },
@@ -1790,6 +1817,9 @@
     "message": "遙測",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "條款及條件"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Ghostery 瀏覽器擴充功能已安裝在你的瀏覽器中，但 Ghosty 正在小睡片刻。"
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "什么是 WhoTracks.Me？"
   },
+  "what_s_next_": {
+    "message": "下一步是？"
+  },
   "white_black_list_error_invalid_url": {
     "message": "請輸入一個有效的 URL 或萬用字元。"
   },
@@ -1888,17 +1921,11 @@
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me 統計報告"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "啟用 Ghostery 後，你即刻可以更安全、更快速地瀏覽網路，並減少惱人的廣告。"
-  },
   "yes": {
     "message": "是"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "你可以隨時在 <strong>Ghostery 控制面板</strong>中更改這些設定。"
-  },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "你可以隨時改變主意並啟用 Ghostery，以在 Ghostery 面板中開始追蹤追蹤器。"
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "你選擇跳過啟用 Ghostery！"
@@ -1911,5 +1938,8 @@
   },
   "your_email_do_not_match": {
     "message": "您的這些電郵不脗合。"
+  },
+  "your_privacy_features_": {
+    "message": "你的隱私功能："
   }
 }
