--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -11,9 +11,6 @@
   "about": {
     "message": "A proposito di"
   },
-  "accept_terms": {
-    "message": "Accetta i termini"
-  },
   "ad_blocking": {
     "message": "Blocco pubblicità"
   },
@@ -34,21 +31,21 @@
   "anti_tracking": {
     "message": "Anti-Tracking"
   },
-  "any_questions__anytime_": {
-    "message": "Domande? Quando vuoi!"
-  },
   "apply_optimal_privacy_settings_": {
     "message": "Applica impostazioni ottimali per la privacy:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Disattivare l'anteprima dei tracker?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Sicuro di non voler abilitare Ghostery?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Confermi di volere mantenere disabilitato Ghostery?"
   },
   "audio_video_player": {
     "message": "Lettore Audio/Video",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_of_cookie_consent_notices_": {
+    "message": "Rifiuta automaticamente notifiche di consenso dei cookie."
   },
   "back": {
     "message": "Indietro"
@@ -66,11 +63,11 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Consulta le FAQ di <a href=\"$${0}\" target=\"_blank\"> </a> o scrivici a <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Saremo più che felici di parlare con te!"
-  },
   "clear_all": {
     "message": "Cancella tutto"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Cliccare sull’icona del puzzle accanto alla barra di ricerca e aggiungi Ghostery alla barra degli strumenti."
   },
   "comments": {
     "message": "Commenti",
@@ -85,9 +82,6 @@
   },
   "contact_support": {
     "message": "Contatta l'assistenza"
-  },
-  "continue": {
-    "message": "Continua"
   },
   "copied_to_clipboard": {
     "message": "Copiato negli appunti"
@@ -108,11 +102,14 @@
   "disabled": {
     "message": "Disattivato"
   },
+  "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
+    "message": "Mostra il conteggio dei tracker sull’icona di Ghostery nella barra degli strumenti del browser."
+  },
   "done": {
     "message": "Fatto"
   },
-  "eliminates_ads_on_websites_you_visit__offering_a_calm__safe_and_private_internet_": {
-    "message": "Eliminates ads on websites you visit, offering a calm, safe and private internet."
+  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
+    "message": "Elimina la pubblicità nei siti web per una navigazione sicura e veloce."
   },
   "email": {
     "message": "Email",
@@ -120,6 +117,9 @@
   },
   "enable_ghostery": {
     "message": "Abilita Ghostery"
+  },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Consenti a Ghostery di navigare sul web in modo più sicuro, veloce e con meno pubblicità."
   },
   "enable_ghostery_to_get_started": {
     "message": "Abilita Ghostery per iniziare"
@@ -141,20 +141,26 @@
   "for_more_information_read_our_full": {
     "message": "Per maggiori informazioni, visita il nostro sito"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "L’estensione per il browser Ghostery è installata nel tuo browser ma è inattiva. Stai navigando sul web in modalità non protetta."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery non può bloccarli a causa di autorizzazioni mancanti."
+  },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery è stato ripristinato su questo sito."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
     "message": "Ghostery non ha nulla a che fare con questa pagina"
   },
-  "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery è in pausa su questo sito."
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery è impostato per bloccare i tracker e proteggere la tua privacy durante la navigazione!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery blocca i tracker e impedisce che tu venga profilato e che le tue informazioni personali vengano vendute agli intermediari di dati."
+  "ghostery_is_disabled": {
+    "message": "Ghostery è disabilitato"
+  },
+  "ghostery_is_paused_on_this_site_": {
+    "message": "Ghostery è in pausa su questo sito."
   },
   "ghostery_paused": {
     "message": "Ghostery ha messo in pausa"
@@ -162,14 +168,14 @@
   "ghostery_privacy_policy": {
     "message": "Informativa sulla Privacy di Ghostery"
   },
-  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collectors__from_ads_to_trackers_and_cookie_popups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collectors, from ads to trackers and cookie popups."
-  },
-  "ghostery_s_ai_driven_anti_tracking_technology_prevents_various_tracking_techniques_securing_your_digital_privacy_while_browsing_the_web_": {
-    "message": "Ghostery’s AI driven Anti-Tracking technology prevents various tracking techniques securing your digital privacy while browsing the web."
+  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
+    "message": "Ghostery protegge la tua privacy rilevando e annullando vari tipi di raccolta dei dati, tra cui pubblicità, tracker e popup dei cookie."
   },
   "ghostery_settings": {
     "message": "Impostazioni Ghostery"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery blocca i tracker e impedisce la tua profilazione da parte di broker di dati."
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghostery sarà messo in pausa su questo sito. È possibile modificare questa impostazione in qualsiasi momento nelle impostazioni di Ghostery per impedire ai tracker e agli annunci di tracciare l'utente sul web."
@@ -180,15 +186,24 @@
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
     "message": "Ghostery sarà messo in pausa su questo sito per 1 ora"
   },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery mostrerà quanti tracker sono stati bloccati in una pagina. Cliccare sull’icona di Ghostery per avere informazioni più dettagliate."
+  },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Accetto di inviare informazioni non personali a <a href=\"$${0}\"> WhoTracks.Me di Ghostery </a>, e accetto l'Informativa sulla trattamento dei dati personali di <a href=\"$${1}\"> Ghostery </a> "
+  "ignore": {
+    "message": "Ignora"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Le informazioni inerenti i tracker sul web verranno condivise in conformità alla nostra <a href=\"$${0}\">Informativa sulla privacy</a>"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Esiste grazie ai micro-contributi di ogni utente di Ghostery che sceglie di inviare informazioni non personali a WhoTracks.Me. Il contributo permette a Ghostery di fornire informazioni in tempo reale sui tracker, che a loro volta proteggono l'intera comunità di Ghostery."
+  },
+  "keep_disabled": {
+    "message": "Mantieni disabilitato"
   },
   "learn_more": {
     "message": "Ulteriori informazioni"
@@ -196,7 +211,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Lascia che Ghostery difenda la tua privacy e rifiuti tutti i popup e il tracciamento per te, oppure fallo tu stesso!"
   },
-  "manifest_name": {
+	"manifest_name": {
     "message": "Ghostery – Ad Blocker per la Privacy"
   },
   "manifest_short_description": {
@@ -260,6 +275,15 @@
   "permission_required": {
     "message": "Autorizzazione richiesta"
   },
+  "pin_extension_for_easy_access": {
+    "message": "Estensione Aggiungi per un accesso rapido"
+  },
+  "pin_it_here": {
+    "message": "Aggiungi qui"
+  },
+  "prevents_various_tracking_techniques_using_ai_driven_technology_": {
+    "message": "Impedisce varie tecniche di tracciamento tramite tecnologia Al-driven."
+  },
   "privacy_policy": {
     "message": "informativa sulla privacy"
   },
@@ -272,11 +296,8 @@
   "read_more_on_whotracks_me": {
     "message": "Scopri di più su WhoTracks.Me"
   },
-  "removes_intrusive_cookie_popups_and_expresses_dissent_to_online_tracking__you_can_browse_the_web_without_worrying_about_cookie_consent_dialogues_or_privacy_violations_": {
-    "message": "Removes intrusive cookie popups and expresses dissent to online tracking. You can browse the web without worrying about cookie consent dialogues or privacy violations."
-  },
-  "replaces_ghostery_icon_in_the_browser_toolbar": {
-    "message": "Replaces Ghostery icon in the browser toolbar"
+  "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
+    "message": "Sostituisce l’icona di Ghostery nella barra degli strumenti del browser con la ruota tracker."
   },
   "report_a_broken_page": {
     "message": "Segnala una pagina orfana"
@@ -290,11 +311,11 @@
   "settings": {
     "message": "Impostazioni"
   },
-  "show_tracker_count_badge_on_the_ghostery_icon_in_browser_toolbar": {
-    "message": "Mostra il badge con il conteggio dei tracker sull'icona di Ghostery nella barra degli strumenti del browser"
+  "setup_successful": {
+    "message": "Configurazione completata correttamente"
   },
-  "shows_statistical_information_about_website_tracking_on_search_engine_result_page": {
-    "message": "Shows statistical information about website tracking on search engine result page"
+  "shows_the_tracker_preview_beside_search_results_": {
+    "message": "Mostra l’anteprima Tracker accanto ai risultati di ricerca."
   },
   "sign_in": {
     "message": "Accedi"
@@ -320,8 +341,8 @@
     "message": "Telemetria",
     "description": "Tracker category name"
   },
-  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "L'estensione per il browser Ghostery è installata, ma Ghosty sta facendo un sonnellino."
+  "terms___conditions": {
+    "message": "Termini e Condizioni"
   },
   "tired_of_cookie_popups_": {
     "message": "STANCO DEI POPUP DEI COOKIE?"
@@ -354,11 +375,17 @@
   "websites": {
     "message": "Siti web"
   },
+  "welcome_to_ghostery": {
+    "message": "Benvenuto in Ghostery"
+  },
   "what_is_whotracks_me_": {
     "message": "Che cos'è WhoTracks.Me?"
   },
-  "when_pausing_ghostery_on_individual_websites_for_various_personal_reasons__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites for various personal reasons, those websites will appear here."
+  "what_s_next_": {
+    "message": "Come procedere?"
+  },
+  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
+    "message": "Mettendo in pausa Ghostery nei singoli siti web, tali siti appariranno qui."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, gestito da Ghostery, è parte integrante della tecnologia anti-tracciamento AI di Ghostery. Si tratta di una risorsa globale completa sui tracker, che porta trasparenza al tracciamento sul web."
@@ -369,28 +396,19 @@
   "whotracks_me_wheel": {
     "message": "Ruota whotracks.me?"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Con Ghostery attivato navighi sul web in modo più sicuro, più veloce e con meno annunci fastidiosi."
-  },
   "yes": {
     "message": "Sì"
+  },
+  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
+    "message": "Puoi modificare le impostazioni di seguito. Consigliamo di mantenerle sempre attive. "
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Puoi sempre possibile modificare queste impostazioni nel&nbsp;<strong>pannello di controllo di Ghostery</strong>."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Puoi cambiare idea in qualsiasi momento e consentire a Ghostery di iniziare a tracciare i tracker per te nel pannello di Ghostery."
-  },
-  "you_can_manage_the_functionality_of_these_privacy_components_to_your_liking__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can manage the functionality of these privacy components to your liking. We recommend keeping them ON at all times."
-  },
-  "you_chose_to_skip_enabling_ghostery_": {
-    "message": "Hai scelto di non abilitare Ghostery!"
-  },
-  "you_re_all_set__ghosterian_": {
-    "message": "Tutto pronto, Ghosterian!"
-  },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Non vedrai più le ruote del tracker vicino ai risultati della ricerca."
+  },
+  "your_privacy_features_": {
+    "message": "Le tue funzioni privacy:"
   }
 }
