--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -11,9 +11,6 @@
   "about": {
     "message": "バージョン情報"
   },
-  "accept_terms": {
-    "message": "条件を受け入れる"
-  },
   "ad_blocking": {
     "message": "広告ブロッキング"
   },
@@ -34,21 +31,21 @@
   "anti_tracking": {
     "message": "追跡防止"
   },
-  "any_questions__anytime_": {
-    "message": "何か質問は？ いつでもOK!"
-  },
   "apply_optimal_privacy_settings_": {
     "message": "最適なプライバシー設定を適用:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Trackers Previewを無効にしてもよいですか？"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "本当にGhosteryを有効にしなくてもいいのですか？"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "本当にGhosteryを無効にしたままでよいですか？"
   },
   "audio_video_player": {
     "message": "オーディオ/ビデオ・プレーヤー",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_of_cookie_consent_notices_": {
+    "message": "Cookieの同意通知を自動で拒否します。"
   },
   "back": {
     "message": "戻る"
@@ -66,11 +63,11 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "<a href=\"$${0}\" target=\"_blank\">FAQs</a> を確認するか、<a href=\"mailto:$${1}\">$${2}</a>までお問い合わせください。 <br/> ぜひ、ご相談ください。"
-  },
   "clear_all": {
     "message": "すべてクリア"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "検索バーの横にあるパズルのアイコンをクリックし、Ghosteryをツールバーに固定します。"
   },
   "comments": {
     "message": "コメント",
@@ -85,9 +82,6 @@
   },
   "contact_support": {
     "message": "お問い合わせ先"
-  },
-  "continue": {
-    "message": "継続"
   },
   "copied_to_clipboard": {
     "message": "クリップボードにコピー済み"
@@ -108,11 +102,14 @@
   "disabled": {
     "message": "無効化済み"
   },
+  "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
+    "message": "ブラウザのツールバーのGhosteryアイコンにトラッカー数を表示します。"
+  },
   "done": {
     "message": "完了"
   },
-  "eliminates_ads_on_websites_you_visit__offering_a_calm__safe_and_private_internet_": {
-    "message": "Eliminates ads on websites you visit, offering a calm, safe and private internet."
+  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
+    "message": "ウェブサイト上の広告を除去し、安全で高速なブラウジングを実現します。"
   },
   "email": {
     "message": "メール",
@@ -120,6 +117,9 @@
   },
   "enable_ghostery": {
     "message": "Ghosteryを有効にする"
+  },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Ghosteryを有効にすることで、より安全に、より速く、より少ない広告でウェブを閲覧することができます。"
   },
   "enable_ghostery_to_get_started": {
     "message": "Ghosteryを有効にして開始する"
@@ -141,20 +141,26 @@
   "for_more_information_read_our_full": {
     "message": "詳細はこちらをご覧ください"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery Browser Extensionはブラウザにインストールされていますが、非アクティブになっています。あなたは無防備にウェブを閲覧していることになります。"
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghosteryは権限が足りないため、ブロックできません。"
+  },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghosteryがこのサイトで再開されました。"
   },
   "ghostery_has_nothing_to_do_on_this_page": {
     "message": "Ghosteryは、このページでは何もしません。"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するようにきちんと設定されています!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghosteryが無効になっています"
+  },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghosteryは、このサイトで一時停止しています。"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するように設定されています!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghosteryはトラッカーの追跡を止め、あなたがプロファイリングされ、あなたの個人情報がデータブローカーに売られることを防いでいます。"
   },
   "ghostery_paused": {
     "message": "ゴーストリーの一時停止"
@@ -162,14 +168,14 @@
   "ghostery_privacy_policy": {
     "message": "Ghosteryプライバシー・ポリシー"
   },
-  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collectors__from_ads_to_trackers_and_cookie_popups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collectors, from ads to trackers and cookie popups."
-  },
-  "ghostery_s_ai_driven_anti_tracking_technology_prevents_various_tracking_techniques_securing_your_digital_privacy_while_browsing_the_web_": {
-    "message": "Ghostery’s AI driven Anti-Tracking technology prevents various tracking techniques securing your digital privacy while browsing the web."
+  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
+    "message": "Ghosteryは、広告、トラッカー、Cookieポップアップなど、さまざまな種類のデータ収集を検知して無効化することで、お客様のプライバシーを保護します。"
   },
   "ghostery_settings": {
     "message": "Ghostery 設定"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghosteryはトラッカーの追跡を阻止し、データブローカーによるプロファイリングを防止します。"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghosteryは、このサイトで一時停止されます。 この設定は、Ghosteryの設定でいつでも変更でき、トラッカーや広告がウェブ上であなたを追跡するのを阻止することができます。"
@@ -180,15 +186,24 @@
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
     "message": "Ghosteryは、このサイトで1時間停止します。"
   },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghosteryは、あるページでブロックされたトラッカーの数を表示します。Ghosteryのアイコンをクリックすると、より詳細な情報が表示されます。"
+  },
   "hosting": {
     "message": "ホスティング",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "<a href=\"$${0}\">Ghostery’s WhoTracks.Me</a>に個人情報以外の情報を送信することに同意し、<a href=\"$${1}\">GhosteryのPrivacy Policy</a><a href=\"$${0}\">WhoTracks.Me</a> を承諾します。"
+  "ignore": {
+    "message": "無視する"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "ウェブトラッカーに関する情報は、当社の<a href=\"$${0}\">プライバシーポリシー</a>に基づき共有されます"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "これは、WhoTracks.Meに個人情報以外の情報を送信することを選択したGhosteryユーザー全員による、小さな貢献のおかげで存在しています。 入力すると、Ghosteryは見返りとしてトラッカーと保護に関するリアルタイムの情報をGhosteryのコミュニティ全体に提供することができます。"
+  },
+  "keep_disabled": {
+    "message": "無効にしておく"
   },
   "learn_more": {
     "message": "詳細はこちら"
@@ -196,7 +211,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Ghosteryをプライバシーの完璧な守護者にして、ポップアップやお客様の追跡を全て拒否するか、ご自身で手動設定しましょう!"
   },
-  "manifest_name": {
+	"manifest_name": {
     "message": "Ghostery – プライバシー広告ブロッカー"
   },
   "manifest_short_description": {
@@ -260,6 +275,15 @@
   "permission_required": {
     "message": "許可が必要"
   },
+  "pin_extension_for_easy_access": {
+    "message": "アクセスしやすいようにExtensionをピン留めする"
+  },
+  "pin_it_here": {
+    "message": "ここにピン留め"
+  },
+  "prevents_various_tracking_techniques_using_ai_driven_technology_": {
+    "message": "AIを活用した技術で様々な追跡手法を防止します。"
+  },
   "privacy_policy": {
     "message": "プライバシー・ポリシー"
   },
@@ -272,11 +296,8 @@
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Meで詳細を見る"
   },
-  "removes_intrusive_cookie_popups_and_expresses_dissent_to_online_tracking__you_can_browse_the_web_without_worrying_about_cookie_consent_dialogues_or_privacy_violations_": {
-    "message": "Removes intrusive cookie popups and expresses dissent to online tracking. You can browse the web without worrying about cookie consent dialogues or privacy violations."
-  },
-  "replaces_ghostery_icon_in_the_browser_toolbar": {
-    "message": "Replaces Ghostery icon in the browser toolbar"
+  "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
+    "message": "ブラウザのツールバーのGhosteryのアイコンをトラッカーホイールに置き換えます。"
   },
   "report_a_broken_page": {
     "message": "区切られたページを報告"
@@ -290,11 +311,11 @@
   "settings": {
     "message": "設定"
   },
-  "show_tracker_count_badge_on_the_ghostery_icon_in_browser_toolbar": {
-    "message": "ブラウザ・ツールバーのGhosteryアイコンにトラッカー・カウント・バッジを表示"
+  "setup_successful": {
+    "message": "セットアップ成功"
   },
-  "shows_statistical_information_about_website_tracking_on_search_engine_result_page": {
-    "message": "Shows statistical information about website tracking on search engine result page"
+  "shows_the_tracker_preview_beside_search_results_": {
+    "message": "検索結果の横にトラッカープレビューを表示します。"
   },
   "sign_in": {
     "message": "サインイン"
@@ -320,8 +341,8 @@
     "message": "テレメトリー",
     "description": "Tracker category name"
   },
-  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "Ghostery Browser Extensionはブラウザにインストールされていますが、Ghostyは休止中です。"
+  "terms___conditions": {
+    "message": "利用規約"
   },
   "tired_of_cookie_popups_": {
     "message": "クッキーのポップアップにうんざりですか?"
@@ -354,11 +375,17 @@
   "websites": {
     "message": "ウェブサイト"
   },
+  "welcome_to_ghostery": {
+    "message": "Ghosteryをご利用いただきありがとうございます"
+  },
   "what_is_whotracks_me_": {
     "message": "WhoTracks.Meとは何か？"
   },
-  "when_pausing_ghostery_on_individual_websites_for_various_personal_reasons__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites for various personal reasons, those websites will appear here."
+  "what_s_next_": {
+    "message": "次は何をするのでしょうか？"
+  },
+  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
+    "message": "個々のウェブサイトでGhosteryを一時停止すると、そのウェブサイトがここに表示されます。"
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "Ghosteryが運営するWhoTracks.Meは、GhosteryのAIアンチトラッキング技術に統合されている要素です。 トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
@@ -369,28 +396,19 @@
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me Wheel"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Ghosteryを有効にすると、より安全に、より速く、そして迷惑な広告をより減らす形で、ウェブを瞬時にブラウズすることができます。"
-  },
   "yes": {
     "message": "はい"
+  },
+  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
+    "message": "以下で設定を調整することができます。常時ONにしておくことをお勧めします。"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "&nbsp;<strong>Ghostery制御パネル</strong>でこれら設定をいつでも変更できます。"
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "お客様はいつでも考えが変わったときに、Ghosteryのパネルで、お客様へのトラッカーの追跡開始を有効にすることができます。"
-  },
-  "you_can_manage_the_functionality_of_these_privacy_components_to_your_liking__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can manage the functionality of these privacy components to your liking. We recommend keeping them ON at all times."
-  },
-  "you_chose_to_skip_enabling_ghostery_": {
-    "message": "Ghosteryの有効化のスキップを選択しました。"
-  },
-  "you_re_all_set__ghosterian_": {
-    "message": "Ghosteryの仲間として、これで大丈夫です!"
-  },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "検索結果の横にトラッカーホイールが表示されなくなります。"
+  },
+  "your_privacy_features_": {
+    "message": "あなたのプライバシーを守る機能:"
   }
 }
