--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -11,9 +11,6 @@
   "about": {
     "message": "정보 "
   },
-  "accept_terms": {
-    "message": "약관 동의"
-  },
   "ad_blocking": {
     "message": "광고 차단"
   },
@@ -34,21 +31,21 @@
   "anti_tracking": {
     "message": "추적 방지 "
   },
-  "any_questions__anytime_": {
-    "message": "질문이 있으십니까? 언제든지요!"
-  },
   "apply_optimal_privacy_settings_": {
     "message": "최적의 개인 정보 설정 적용:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "트래커 미리보기를 비활성화하시겠습니까?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Ghostery 활성화를 건너뛰시겠습니까?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Ghostery의 비활성 상태를 계속 유지하시겠습니까?"
   },
   "audio_video_player": {
     "message": "오디오/비디오 플레이어 ",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_of_cookie_consent_notices_": {
+    "message": "쿠키 동의 알림을 자동 거부합니다."
   },
   "back": {
     "message": "뒤로"
@@ -66,11 +63,11 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "<a href=\"$${0}\" target=\"_blank\">FAQ</a>을 확인해 보시거나 <a href=\"mailto:$${1}\">$${2}</a>로 연락 주십시오. <br/> 어떤 문의든 궁금하신 점이 있으면 저희에게 연락해 주십시오!"
-  },
   "clear_all": {
     "message": "모두 지우기"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "검색 바 옆 퍼즐 아이콘을 클릭하면 Ghostery가 툴바에 고정됩니다."
   },
   "comments": {
     "message": "댓글",
@@ -85,9 +82,6 @@
   },
   "contact_support": {
     "message": "연락 지원 "
-  },
-  "continue": {
-    "message": "계속"
   },
   "copied_to_clipboard": {
     "message": "클립보드에 복사됨"
@@ -108,11 +102,14 @@
   "disabled": {
     "message": "비활성화됨"
   },
+  "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
+    "message": "브라우저 툴바 Ghostery 아이콘상에 트래커 개수를 표시합니다."
+  },
   "done": {
     "message": "완료"
   },
-  "eliminates_ads_on_websites_you_visit__offering_a_calm__safe_and_private_internet_": {
-    "message": "Eliminates ads on websites you visit, offering a calm, safe and private internet."
+  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
+    "message": "웹사이트에서 광고를 제거하여 안전하고 빠른 브라우징 환경을 만듭니다."
   },
   "email": {
     "message": "이메일 ",
@@ -120,6 +117,9 @@
   },
   "enable_ghostery": {
     "message": "Ghostery 활성화"
+  },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Ghostery를 활성화하여 더욱 안전하고, 빠르고, 광고가 적은 웹을 즐기세요."
   },
   "enable_ghostery_to_get_started": {
     "message": "시작하려면 Ghostery를 활성화하십시오"
@@ -141,20 +141,26 @@
   "for_more_information_read_our_full": {
     "message": "자세한 정보는 전문을 읽으시기 바랍니다"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "브라우저에 Ghostery 브라우저 확장 프로그램에 설치되어 있지만 비활성 상태입니다. 웹 브라우징이 보호되지 않습니다."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "누락된 권한이 있어 Ghostery가 차단할 수 없습니다."
+  },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "이 사이트에서 Ghostery가 재개되었습니다."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
     "message": "이 사이트에서는 Ghostery가 할 일이 없습니다. "
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery는 트래커의 추적 행위를 막아 브라우징 중 이용자의 프라이버시를 완벽하게 보호합니다!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery가 비활성화됨"
+  },
   "ghostery_is_paused_on_this_site_": {
     "message": "이 사이트에서 Ghostery가 일시 중지되었습니다. "
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery는 인터넷 탐색 중 트래커의 추적을 중단하고 사용자의 개인정보를 보호하도록 설정되었습니다!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery는 트래커의 추적을 중단하고 사용자가 프로파일링되는 것을 방지하여 트래커가 사용자의 개인 정보를 데이터 브로커에게 판매하지 못하게 합니다."
   },
   "ghostery_paused": {
     "message": "Ghostery 일시중지됨"
@@ -162,14 +168,14 @@
   "ghostery_privacy_policy": {
     "message": "Ghostery 개인정보 취급방침"
   },
-  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collectors__from_ads_to_trackers_and_cookie_popups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collectors, from ads to trackers and cookie popups."
-  },
-  "ghostery_s_ai_driven_anti_tracking_technology_prevents_various_tracking_techniques_securing_your_digital_privacy_while_browsing_the_web_": {
-    "message": "Ghostery’s AI driven Anti-Tracking technology prevents various tracking techniques securing your digital privacy while browsing the web."
+  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
+    "message": "Ghostery는 광고, 트래커, 쿠키 팝업 등 다양한 유형의 데이터 수집을 감지하고 유해 요소를 해소하여 이용자의 프라이버시를 보호합니다."
   },
   "ghostery_settings": {
     "message": "Ghostery 설정 "
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery는 트래커의 추적 행위를 막아 데이터 브로커가 이용자를 프로파일링하지 못하게 합니다."
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "이 사이트에서 Ghostery가 일시 중지될 것입니다. 언제든지 마음을 바꾸어 Ghostery 설정에서 트래커와 광고가 웹에서 귀하를 추적하는 것을 중단하게 할 수 있습니다."
@@ -180,15 +186,24 @@
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
     "message": "이 사이트에서 Ghostery가 1시간 동안 일시 중지될 것입니다."
   },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery는 페이지에서 차단된 트래커의 수를 보여줍니다. Ghostery 아이콘을 클릭하면 자세한 정보를 볼 수 있습니다."
+  },
   "hosting": {
     "message": "호스팅",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "본인은 <a href=\"$${0}\">WhoTracks.Me</a>에 개인 정보가 아닌 정보를 전송하는 데 동의하며 <a href=\"$${1}\">Ghostery의 개인 정보 취급 방침</a>에 동의합니다"
+  "ignore": {
+    "message": "무시"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "웹 트래커에 대한 정보는 당사의 <a href=\"$${0}\">개인정보 처리방침</a>에 따라 공유됩니다."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "트래커 정보를 WhoTracks.Me로 전송을 허락해 준 모든 Ghostery 사용자의 이러한 작은 기여들이 모여 Ghostery는 운영됩니다. 트래커를 입력하면 Ghostery가 트래커에 대한 실시간 정보를 제공하고 이렇게 전체 Ghostery 사용자 커뮤니티가 보호받을 수 있습니다."
+  },
+  "keep_disabled": {
+    "message": "비활성 상태 유지"
   },
   "learn_more": {
     "message": "자세히 알아보기"
@@ -196,7 +211,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Ghostery가 귀하의 완전한 개인 정보 보호를 지원할 수 있게 하고 모든 팝업 및 추적을 거부하십시오. 또는 직접 실행할 수도 있습니다!"
   },
-  "manifest_name": {
+	"manifest_name": {
     "message": "Ghostery – 개인정보 보호용 광고 차단기"
   },
   "manifest_short_description": {
@@ -260,6 +275,15 @@
   "permission_required": {
     "message": "권한 필요"
   },
+  "pin_extension_for_easy_access": {
+    "message": "빠르게 이용할 수 있게 확장 프로그램 고정"
+  },
+  "pin_it_here": {
+    "message": "여기 고정"
+  },
+  "prevents_various_tracking_techniques_using_ai_driven_technology_": {
+    "message": "AI 기반 기술로 다양한 추적 기법에 대응합니다."
+  },
   "privacy_policy": {
     "message": "개인정보 취급방침"
   },
@@ -272,11 +296,8 @@
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Me 자세히 보기"
   },
-  "removes_intrusive_cookie_popups_and_expresses_dissent_to_online_tracking__you_can_browse_the_web_without_worrying_about_cookie_consent_dialogues_or_privacy_violations_": {
-    "message": "Removes intrusive cookie popups and expresses dissent to online tracking. You can browse the web without worrying about cookie consent dialogues or privacy violations."
-  },
-  "replaces_ghostery_icon_in_the_browser_toolbar": {
-    "message": "Replaces Ghostery icon in the browser toolbar"
+  "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
+    "message": "브라우저 툴바에서 Ghostery 아이콘을 트래커 휠로 대체합니다."
   },
   "report_a_broken_page": {
     "message": "깨진 페이지 보고 "
@@ -290,11 +311,11 @@
   "settings": {
     "message": "설정 "
   },
-  "show_tracker_count_badge_on_the_ghostery_icon_in_browser_toolbar": {
-    "message": "브라우저 도구 모음의 Ghostery 아이콘에 트래커 카운트 배지 표시 "
+  "setup_successful": {
+    "message": "셋업 성공"
   },
-  "shows_statistical_information_about_website_tracking_on_search_engine_result_page": {
-    "message": "Shows statistical information about website tracking on search engine result page"
+  "shows_the_tracker_preview_beside_search_results_": {
+    "message": "검색결과 옆에 트래커 미리보기를 표시합니다."
   },
   "sign_in": {
     "message": "로그인 "
@@ -320,8 +341,8 @@
     "message": "원격 측정",
     "description": "Tracker category name"
   },
-  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "브라우저에 Ghostery 브라우저 확장이 설치되어 있지만 Ghosty가 낮잠을 자고 있군요."
+  "terms___conditions": {
+    "message": "사용 약관 "
   },
   "tired_of_cookie_popups_": {
     "message": "쿠키 팝업이 너무 많습니까?"
@@ -354,11 +375,17 @@
   "websites": {
     "message": "웹사이트"
   },
+  "welcome_to_ghostery": {
+    "message": "Ghostery를 시작합니다"
+  },
   "what_is_whotracks_me_": {
     "message": "WhoTracks.Me란?"
   },
-  "when_pausing_ghostery_on_individual_websites_for_various_personal_reasons__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites for various personal reasons, those websites will appear here."
+  "what_s_next_": {
+    "message": "다음 업데이트"
+  },
+  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
+    "message": "개별 웹사이트에서 Ghostery를 일시 중지하면 해당 웹사이트가 여기 표시됩니다."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "Ghostery가 운영하는 WhoTracks.Me는 Ghostery의 AI 추적 방지 기술을 필수 부분으로 작동합니다. 이는 트래커에 대한 가장 포괄적인 글로벌 리소스로서 웹 추적에 투명성을 가져다 줍니다."
@@ -369,28 +396,19 @@
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me 휠 "
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Ghostery를 사용하면 웹을 즉시 보다 안전하고 빠르게 탐색할 수 있으며 성가신 광고들도 줄어들게 됩니다."
-  },
   "yes": {
     "message": "예 "
+  },
+  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
+    "message": "아래에서 설정을 조정하실 수 있습니다. 항상 켜둘 것을 권장합니다."
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "해당 설정은&nbsp;<strong>Ghostery 제어판</strong>에서 언제든지 변경할 수 있습니다."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "언제든지 결정을 바꾸실 수 있으며, Ghostery 설정에서 Ghostery가 트래커 추적을 시작하도록 변경할 수 있습니다."
-  },
-  "you_can_manage_the_functionality_of_these_privacy_components_to_your_liking__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can manage the functionality of these privacy components to your liking. We recommend keeping them ON at all times."
-  },
-  "you_chose_to_skip_enabling_ghostery_": {
-    "message": "Ghostery 활성화를 건너뛰기로 하셨습니다!"
-  },
-  "you_re_all_set__ghosterian_": {
-    "message": "모두 준비가 되었습니다, Ghosterian!"
-  },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "검색 결과 옆의 트래커 휠이 더 이상 표시되지 않습니다."
+  },
+  "your_privacy_features_": {
+    "message": "프라이버시 관련 기능:"
   }
 }
