--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -11,9 +11,6 @@
   "about": {
     "message": "O nas"
   },
-  "accept_terms": {
-    "message": "Akceptowanie warunków"
-  },
   "ad_blocking": {
     "message": "Blokowanie reklam"
   },
@@ -34,21 +31,21 @@
   "anti_tracking": {
     "message": "Ochrona przed śledzeniem"
   },
-  "any_questions__anytime_": {
-    "message": "Masz pytanie? Skontaktuj się z nami!"
-  },
   "apply_optimal_privacy_settings_": {
     "message": "Zastosuj optymalne ustawienia prywatności:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Chcesz wyłączyć Podgląd trackerów?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Na pewno chcesz pominąć aktywację Ghostery?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Czy na pewno chcesz, aby Ghostery nadal było nieaktywne?"
   },
   "audio_video_player": {
     "message": "Odtwarzacz audio/wideo",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_of_cookie_consent_notices_": {
+    "message": "Automatycznie odrzuca komunikaty dotyczące zgody na stosowanie plików cookie."
   },
   "back": {
     "message": "Wstecz"
@@ -66,11 +63,11 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Sprawdź <a href=\"$${0}\" target=\"_blank\"> FAQ </a> lub napisz do nas na <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Będziemy bardziej niż szczęśliwi, aby porozmawiać z tobą!"
-  },
   "clear_all": {
     "message": "Wyczyść wszystko"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Kliknij ikonę puzzla obok pola wyszukiwania i przypnij Ghostery do paska narzędzi."
   },
   "comments": {
     "message": "Komentarze",
@@ -85,9 +82,6 @@
   },
   "contact_support": {
     "message": "Skontaktuj się z obsługą"
-  },
-  "continue": {
-    "message": "Kontynuuj"
   },
   "copied_to_clipboard": {
     "message": "Skopiowano do schowka"
@@ -108,11 +102,14 @@
   "disabled": {
     "message": "Wyłączone"
   },
+  "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
+    "message": "Wyświetla Licznik Trackerów na ikonie Ghostery w pasku narzędzi."
+  },
   "done": {
     "message": "Gotowe"
   },
-  "eliminates_ads_on_websites_you_visit__offering_a_calm__safe_and_private_internet_": {
-    "message": "Eliminates ads on websites you visit, offering a calm, safe and private internet."
+  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
+    "message": "Usuwa reklamy na stronach internetowych, zapewniając bezpieczniejsze i szybsze przeglądanie."
   },
   "email": {
     "message": "E-mail",
@@ -120,6 +117,9 @@
   },
   "enable_ghostery": {
     "message": "Aktywuj Ghostery"
+  },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Uaktywnij Ghostery, aby przeglądać strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam. "
   },
   "enable_ghostery_to_get_started": {
     "message": "Aktywuj Ghostery, aby rozpocząć"
@@ -141,20 +141,26 @@
   "for_more_information_read_our_full": {
     "message": "Aby uzyskać więcej informacji, przeczytaj "
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Wtyczka Ghostery Browser jest zainstalowana na twojej przeglądarce, ale jest nieaktywna. Przeglądasz strony internetowe w sposób niechroniony."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery nie może ich blokować, ponieważ nie ma uprawnień."
+  },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery zostało wznowione dla tej witryny."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
     "message": "Ghostery nic nie wykryło na tej stronie"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery jest już gotowy, aby blokować Trackerów i chronić twoją prywatność podczas przeglądania."
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery jest nieaktywne"
+  },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery zostało wstrzymane dla tej witryny."
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery działa tak, aby zatrzymać trackery podczas ich śledzenia i ochronić Twoją prywatność podczas przeglądania internetu!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery zatrzymuje trackery na ich drodze i zapobiega profilowaniu Ciebie i Twoich danych osobowych sprzedawanych brokerom danych."
   },
   "ghostery_paused": {
     "message": "Ghostery wstrzymane"
@@ -162,14 +168,14 @@
   "ghostery_privacy_policy": {
     "message": "Polityka prywatności Ghostery"
   },
-  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collectors__from_ads_to_trackers_and_cookie_popups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collectors, from ads to trackers and cookie popups."
-  },
-  "ghostery_s_ai_driven_anti_tracking_technology_prevents_various_tracking_techniques_securing_your_digital_privacy_while_browsing_the_web_": {
-    "message": "Ghostery’s AI driven Anti-Tracking technology prevents various tracking techniques securing your digital privacy while browsing the web."
+  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
+    "message": "Ghostery chroni twoją prywatność poprzez wykrywanie i neutralizowanie różnych sposobów gromadzenia danych, w tym reklam, Trackerów i komunikatów o plikach cookies."
   },
   "ghostery_settings": {
     "message": "Ustawienia Ghostery"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery blokuje Trackerów i zapobiega profilowaniu przez handlarzy danymi."
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghostery zostanie wstrzymane dla tej witryny. Możesz dostosować ustawienia Ghostery w dowolnym momencie, aby uniemożliwić śledzenie Ciebie w sieci przez trackery i reklamy"
@@ -180,15 +186,24 @@
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
     "message": "Ghostery zostanie wstrzymane dla tej witryny na 1 godzinę"
   },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery będzie wyświetlać liczbę Trackerów zablokowanych na danej stronie. Kliknięcie w ikonę Ghostery spowoduje wyśwetlenie bardziej szczegółowych informacji."
+  },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Wyrażam zgodę na przesyłanie informacji nieosobowych do <a href=\"$${0}\">Ghostery WhoTracks.Me</a>, oraz akceptuję  <a href=\"$${1}\">Politykę Prywatności Ghostery</a> "
+  "ignore": {
+    "message": "Zignoruj"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Informacje dotyczące Trackerów będą udostępniane zgodnie z naszymi <a href=\"$${0}\">Zasadami ochrony prywatności</a>"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Istnieje dzięki mikrowkładom każdego użytkownika Ghostery, który zdecyduje się wysłać nieosobiste informacje do WhoTracks.Me. Wkład ten umożliwia Ghostery dostarczanie w czasie rzeczywistym informacji o trackerach, co z kolei zapewnia ochronę całej społeczności Ghostery."
+  },
+  "keep_disabled": {
+    "message": "Pozostaw nieaktywne"
   },
   "learn_more": {
     "message": "Dowiedz się więcej"
@@ -196,7 +211,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Pozwól, aby wtyczka Ghostery pełniła funkcję Twojego obrońcy prywatności i odrzucała wszystkie popupy i trackery, lub zajmij się tym sam!"
   },
-  "manifest_name": {
+	"manifest_name": {
     "message": "Ghostery – Bloker reklam chroniący prywatność"
   },
   "manifest_short_description": {
@@ -260,6 +275,15 @@
   "permission_required": {
     "message": "Wymagane uprawnienia"
   },
+  "pin_extension_for_easy_access": {
+    "message": "Przypnij Rozszerzenie i ciesz się łatwiejszym dostępem"
+  },
+  "pin_it_here": {
+    "message": "Przypnij je tu"
+  },
+  "prevents_various_tracking_techniques_using_ai_driven_technology_": {
+    "message": "Chroń swoje dane przed śledzeniem w sieci dzięki technologii wspomaganej przez SI"
+  },
   "privacy_policy": {
     "message": "polityka prywatności"
   },
@@ -272,11 +296,8 @@
   "read_more_on_whotracks_me": {
     "message": "Dowiedz się więcej na WhoTracks.Me"
   },
-  "removes_intrusive_cookie_popups_and_expresses_dissent_to_online_tracking__you_can_browse_the_web_without_worrying_about_cookie_consent_dialogues_or_privacy_violations_": {
-    "message": "Removes intrusive cookie popups and expresses dissent to online tracking. You can browse the web without worrying about cookie consent dialogues or privacy violations."
-  },
-  "replaces_ghostery_icon_in_the_browser_toolbar": {
-    "message": "Replaces Ghostery icon in the browser toolbar"
+  "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
+    "message": "Zastępuje ikonę Ghostery w pasku narzędzi przeglądarki ikoną koła."
   },
   "report_a_broken_page": {
     "message": "Zgłoś uszkodzoną stronę"
@@ -290,11 +311,11 @@
   "settings": {
     "message": "Ustawienia"
   },
-  "show_tracker_count_badge_on_the_ghostery_icon_in_browser_toolbar": {
-    "message": "Pokaż etykietkę licznika tropicieli na ikonce Ghostery w pasku narzędziowym przeglądarki"
+  "setup_successful": {
+    "message": "Ustawienie zakończone sukcesem"
   },
-  "shows_statistical_information_about_website_tracking_on_search_engine_result_page": {
-    "message": "Shows statistical information about website tracking on search engine result page"
+  "shows_the_tracker_preview_beside_search_results_": {
+    "message": "Wyświetla podgląd Trackerów przy wynikach wyszukiwania."
   },
   "sign_in": {
     "message": "Zaloguj się"
@@ -320,8 +341,8 @@
     "message": "Telemetria",
     "description": "Tracker category name"
   },
-  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "Wtyczka Ghostery Browser jest zainstalowana na twojej przeglądarce, ale Ghosty ucina sobie małą drzemkę."
+  "terms___conditions": {
+    "message": "Warunki"
   },
   "tired_of_cookie_popups_": {
     "message": "MASZ JUŻ DOŚĆ PYTAŃ O CIASTECZKA?"
@@ -354,11 +375,17 @@
   "websites": {
     "message": "Witryny"
   },
+  "welcome_to_ghostery": {
+    "message": "Witamy w Ghostery"
+  },
   "what_is_whotracks_me_": {
     "message": "Czym jest WhoTracks.Me?"
   },
-  "when_pausing_ghostery_on_individual_websites_for_various_personal_reasons__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites for various personal reasons, those websites will appear here."
+  "what_s_next_": {
+    "message": "Co dalej?"
+  },
+  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
+    "message": "Jeśli spauzujesz Ghostery na indywidualnej stronie internetowej, ta strona pojawi się tutaj."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość do śledzenia w sieci."
@@ -369,28 +396,19 @@
   "whotracks_me_wheel": {
     "message": "Wykres kołowy WhoTracks.Me"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Z włączonym Ghostery przeglądasz strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam."
-  },
   "yes": {
     "message": "Tak"
+  },
+  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
+    "message": "Możesz dostosować ustawienia poniżej. Zalecamy, aby pozostawić je zawsze WŁĄCZONE."
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Ustawienia te zawsze możesz zmienić w&nbsp;<strong>Panelu sterowania Ghostery</strong>."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "W każdej chwili możesz zmienić zdanie i umożliwić Ghostery rozpoczęcie śledzenia trackerów dla Ciebie w panelu Ghostery."
-  },
-  "you_can_manage_the_functionality_of_these_privacy_components_to_your_liking__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can manage the functionality of these privacy components to your liking. We recommend keeping them ON at all times."
-  },
-  "you_chose_to_skip_enabling_ghostery_": {
-    "message": "Postanowiłeś nie aktywować Ghostery!"
-  },
-  "you_re_all_set__ghosterian_": {
-    "message": "Wszystko gotowe, Ghosterianie!"
-  },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Wykresy kołowe z trackerami nie będą wyświetlane obok wyników wyszukiwania."
+  },
+  "your_privacy_features_": {
+    "message": "Twoje opcje ochrony prywatności:"
   }
 }
