--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -11,9 +11,6 @@
   "about": {
     "message": "Sobre"
   },
-  "accept_terms": {
-    "message": "Aceitar termos"
-  },
   "ad_blocking": {
     "message": "Bloqueio de anúncios"
   },
@@ -34,21 +31,21 @@
   "anti_tracking": {
     "message": "Anti-rastreamento"
   },
-  "any_questions__anytime_": {
-    "message": "Alguma pergunta? A qualquer momento!"
-  },
   "apply_optimal_privacy_settings_": {
     "message": "Aplicar as configurações de privacidade ideais:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Tem certeza de que deseja desativar a visualização de rastreadores?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Tem a certeza de que quer saltar a ativação do Ghostery?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Tem certeza de que deseja manter o Ghostery desativado?"
   },
   "audio_video_player": {
     "message": "Reprodutor de Áudio/Vídeo",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_of_cookie_consent_notices_": {
+    "message": "Rejeita automaticamente os avisos de consentimento de cookies."
   },
   "back": {
     "message": "Voltar"
@@ -66,11 +63,11 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Confira nossas <a href=\"$${0}\" target=\"_blank\">FAQsperguntas frequentes</a> ou escreva-nos: <a href=\"mailto:$${1}\">$${2}</a>. <br/> Teremos o maior prazer em falar com você!"
-  },
   "clear_all": {
     "message": "Limpar tudo"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Clique no ícone do quebra-cabeça ao lado da barra de pesquisa e fixe o Ghostery na sua barra de ferramentas."
   },
   "comments": {
     "message": "Comentários",
@@ -85,9 +82,6 @@
   },
   "contact_support": {
     "message": "Entrar em contato com o suporte"
-  },
-  "continue": {
-    "message": "Continuar"
   },
   "copied_to_clipboard": {
     "message": "Copiado para a área de transferência"
@@ -108,11 +102,14 @@
   "disabled": {
     "message": "Desativado"
   },
+  "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
+    "message": "Exibe a contagem do rastreador no ícone Ghostery na barra de ferramentas do navegador."
+  },
   "done": {
     "message": "Pronto"
   },
-  "eliminates_ads_on_websites_you_visit__offering_a_calm__safe_and_private_internet_": {
-    "message": "Eliminates ads on websites you visit, offering a calm, safe and private internet."
+  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
+    "message": "Elimina anúncios em sites para navegação segura e rápida."
   },
   "email": {
     "message": "Email",
@@ -120,6 +117,9 @@
   },
   "enable_ghostery": {
     "message": "Ativar o Ghostery"
+  },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Habilite o Ghostery para navegar na web de forma mais segura, rápida e com menos anúncios."
   },
   "enable_ghostery_to_get_started": {
     "message": "Autorize o Ghostery para começar"
@@ -141,20 +141,26 @@
   "for_more_information_read_our_full": {
     "message": "Para mais informações, leia a nossa versão completa"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas está inativa. Você está navegando na web desprotegido."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "O Ghostery não pode bloqueá-los devido à falta de permissões."
+  },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "O Ghostery foi retomado neste site."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
     "message": "O Ghostery não tem nada a fazer nesta página."
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "O Ghostery está pronto para parar os rastreadores e proteger sua privacidade enquanto navega!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery está desabilitado"
+  },
   "ghostery_is_paused_on_this_site_": {
     "message": "O Ghostery está pausado neste site."
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "O Ghostery está configurado para parar os rastreadores e proteger sua privacidade ao navegar!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "O Ghostery está parando os rastreadores e impedindo que seu perfil seja criado e suas informações pessoais sejam vendidas a negociadores de dados."
   },
   "ghostery_paused": {
     "message": "Ghostery pausado"
@@ -162,14 +168,14 @@
   "ghostery_privacy_policy": {
     "message": "Política de Privacidade do Ghostery"
   },
-  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collectors__from_ads_to_trackers_and_cookie_popups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collectors, from ads to trackers and cookie popups."
-  },
-  "ghostery_s_ai_driven_anti_tracking_technology_prevents_various_tracking_techniques_securing_your_digital_privacy_while_browsing_the_web_": {
-    "message": "Ghostery’s AI driven Anti-Tracking technology prevents various tracking techniques securing your digital privacy while browsing the web."
+  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
+    "message": "O Ghostery protege sua privacidade detectando e neutralizando diferentes tipos de coleta de dados, incluindo anúncios, rastreadores e pop-ups de cookies."
   },
   "ghostery_settings": {
     "message": "Configurações do Ghostery"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "O Ghostery interrompe os rastreadores e impede que você seja analisado por corretores de dados."
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "O Ghostery será pausado neste site. Você pode mudar isso a qualquer momento nas configurações do Ghostery para impedir que rastreadores e anúncios rastreiem você na web."
@@ -180,15 +186,24 @@
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
     "message": "O Ghostery será pausado neste site por 1 hora."
   },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "O Ghostery mostrará quantos rastreadores foram bloqueados em uma página. Clicar no ícone Ghostery revela informações mais detalhadas."
+  },
   "hosting": {
     "message": "Hospedando",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Concordo em enviar informações não pessoais para o <a href=\"$${0}\">WhoTracks.Me do Ghostery</a> e aceito a <a href=\"$${1}\">Política de Privacidade do Ghostery</a>"
+  "ignore": {
+    "message": "Ignorar"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Informações sobre rastreadores da web serão compartilhadas de acordo com nossa <a href=\"$${0}\"> Política de Privacidade </a> "
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Ele existe graças às microcontribuições de cada usuário do Ghostery que opta por enviar informações não pessoais para o WhoTracks.Me. A entrada permite que o Ghostery forneça informações em tempo real sobre rastreadores que, por sua vez, trazem proteção para toda a comunidade Ghostery."
+  },
+  "keep_disabled": {
+    "message": "Manter desabilitado"
   },
   "learn_more": {
     "message": "Saiba mais"
@@ -196,7 +211,7 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Deixe o Ghostery ser seu defensor completo da privacidade e rejeite todos os pop-ups e rastreamentos para você, ou faça você mesmo!"
   },
-  "manifest_name": {
+	"manifest_name": {
     "message": "Ghostery – Bloqueador de anúncios para privacidade"
   },
   "manifest_short_description": {
@@ -260,6 +275,15 @@
   "permission_required": {
     "message": "Permissão necessária"
   },
+  "pin_extension_for_easy_access": {
+    "message": "Extensão de prendedores para fácil acesso"
+  },
+  "pin_it_here": {
+    "message": "Prenda-o aqui"
+  },
+  "prevents_various_tracking_techniques_using_ai_driven_technology_": {
+    "message": "Impede várias técnicas de rastreamento usando tecnologia orientada por IA."
+  },
   "privacy_policy": {
     "message": "política de privacidade"
   },
@@ -272,11 +296,8 @@
   "read_more_on_whotracks_me": {
     "message": "Leia mais em WhoTracks.Me"
   },
-  "removes_intrusive_cookie_popups_and_expresses_dissent_to_online_tracking__you_can_browse_the_web_without_worrying_about_cookie_consent_dialogues_or_privacy_violations_": {
-    "message": "Removes intrusive cookie popups and expresses dissent to online tracking. You can browse the web without worrying about cookie consent dialogues or privacy violations."
-  },
-  "replaces_ghostery_icon_in_the_browser_toolbar": {
-    "message": "Replaces Ghostery icon in the browser toolbar"
+  "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
+    "message": "Substitui o ícone do Ghostery na barra de ferramentas do navegador pela roda do rastreador."
   },
   "report_a_broken_page": {
     "message": "Relatar uma página quebrada"
@@ -290,11 +311,11 @@
   "settings": {
     "message": "Configurações"
   },
-  "show_tracker_count_badge_on_the_ghostery_icon_in_browser_toolbar": {
-    "message": "Mostrar o crachá de contagem do rastreador no ícone do Ghostery na barra de ferramentas do navegador"
+  "setup_successful": {
+    "message": "Configuração bem sucedida"
   },
-  "shows_statistical_information_about_website_tracking_on_search_engine_result_page": {
-    "message": "Shows statistical information about website tracking on search engine result page"
+  "shows_the_tracker_preview_beside_search_results_": {
+    "message": "Mostra a visualização do rastreador ao lado dos resultados da pesquisa."
   },
   "sign_in": {
     "message": "Entrar"
@@ -320,8 +341,8 @@
     "message": "Telemetria",
     "description": "Tracker category name"
   },
-  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas o Ghosty está tirando uma soneca leve."
+  "terms___conditions": {
+    "message": "Termos e Condições"
   },
   "tired_of_cookie_popups_": {
     "message": "CANSADO DE POPUPS DE COOKIES?"
@@ -354,11 +375,17 @@
   "websites": {
     "message": "Sites"
   },
+  "welcome_to_ghostery": {
+    "message": "Bem-vindo ao Ghostery"
+  },
   "what_is_whotracks_me_": {
     "message": "O que é WhoTracks.Me?"
   },
-  "when_pausing_ghostery_on_individual_websites_for_various_personal_reasons__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites for various personal reasons, those websites will appear here."
+  "what_s_next_": {
+    "message": "O que vem a seguir?"
+  },
+  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
+    "message": "Ao pausar o Ghostery em sites individuais, esses sites aparecerão aqui."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "O WhoTracks.Me, operado pela Ghostery, é parte integrante da tecnologia antirastreamento de IA da Ghostery. É um recurso global abrangente sobre rastreadores que traz transparência ao rastreamento na web."
@@ -369,28 +396,19 @@
   "whotracks_me_wheel": {
     "message": "Roda do WhoTracks.Me"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Com o Ghostery ativado, você navega instantaneamente na web de forma mais segura, mais rápida e com anúncios menos irritantes."
-  },
   "yes": {
     "message": "Sim"
+  },
+  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
+    "message": "Você pode ajustar as configurações abaixo. Recomendamos mantê-los ligados o tempo todo."
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Você sempre pode alterar essas configurações no&nbsp;<strong>painel de controle do Ghostery</strong>."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Você pode mudar de ideia a qualquer momento e permitir que o Ghostery comece a rastrear os rastreadores para você no painel do Ghostery."
-  },
-  "you_can_manage_the_functionality_of_these_privacy_components_to_your_liking__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can manage the functionality of these privacy components to your liking. We recommend keeping them ON at all times."
-  },
-  "you_chose_to_skip_enabling_ghostery_": {
-    "message": "Você optou por ignorar a ativação do Ghostery!"
-  },
-  "you_re_all_set__ghosterian_": {
-    "message": "Está tudo pronto, fantasmagórico!"
-  },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Você não verá mais rodas de rastreadores ao lado dos resultados de pesquisa."
+  },
+  "your_privacy_features_": {
+    "message": "Seus recursos de privacidade:"
   }
 }
